crates/rome_cli/tests/snapshots/main_reporter_json/reports_formatter_check_mode.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `format.js`

```js
  statement(  )  
```

# Emitted Messages

```block
{"formatter":{"summary":{"filesCompared":1,"filesWritten":null},"files":{"format.js":{"formattedContent":"statement();\n"}}},"diagnostics":{"format.js":{"diff":{"severity":"error","before":"  statement(  )  ","after":"statement();\n"}}}}
```


