crates/rome_cli/tests/snapshots/main_reporter_json/reports_formatter_write.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 148
expression: content
---
## `format.js`

```js
statement();

```

# Emitted Messages

```block
{"formatter":{"summary":{"filesCompared":null,"filesWritten":1},"files":{}},"diagnostics":{}}
```


